syntax = "proto3";
package kratos.api;

option go_package = "github.com/leaf-rain/raindata/app_bi/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Log log = 3;
}

message Log {
  string server_name = 1;
  string appid = 2;
  string log_level = 3;
  string log_format = 4;
  bool log_file = 5;
  string log_path = 6;
  int64 log_file_max_size = 7;
  int64 log_file_max_backups = 8;
  int64 log_max_age = 9;
  bool log_compress = 10;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driverName = 1;
    string dbSource = 2;
    int64 maxOpenConns = 3;
    int64 maxIdleConns = 4;
    int64 idleTimeOut = 5;
    bool debug = 6;
  }
  message Redis {
    int64 poolSize = 1;
    repeated string addr = 2;
    string pwd = 3;
    int64 dialTimeout = 4;
    int64 readTimeout = 5;
    int64 writeTimeout = 6;
    int64 db = 7;
  }
  Database database = 1;
  Redis redis = 2;
}
